force-app/main/default/objects/custom_create359__c/custom_create359__c.object-meta.xml
<CustomObject>
    <label>Custom created object359</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects359</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>