force-app/main/default/objects/custom_create359__c/fields/custom_create_359field521__c.field-meta.xml
<CustomField>
    <fullName>custom_create_359field521__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 359field521</label>
    <type>Checkbox</type>
</CustomField>